--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
-  "name": "lfsoverlay",
-  "version": "1.0.2",
+  "name": "lfs_ghost",
+  "version": "1.0.3",
   "main": "dist/src/index.js",
   "scripts": {
     "buildTS": "tsc",
