Revert "version update to 1.0.3"
This reverts commit 004b8ba12e772e0d5757ead09af58e1181a6d081.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
-  "name": "lfs_ghost",
-  "version": "1.0.3",
+  "name": "lfsoverlay",
+  "version": "1.0.2",
   "main": "dist/src/index.js",
   "scripts": {
     "buildTS": "tsc",
